packages/jsii/test/negatives/neg.enum-duplicate-values.ts
export enum Foo {
  FOO = 'foo',
  FOO_DUPLICATE = 'foo',
  BAR = 'bar',
  BAR_COPY = 'bar',
}
